# eval_harness

./: .gitignore  CLAUDE.md  README.md  prompt_registry.yaml  pyproject.toml
calibration/: judge_calibration_set.yaml
demo_agent/: faq_agent_prompt.md  faq_agent_prompt_regressed.md
docs/superpowers/plans/: 2026-07-11-lit-39-eval-harness.md
golden_sets/: faq-demo-agent.yaml  jira-ticket-kickoff.yaml
scripts/: calibrate_judge.py
src/eval_harness/: anthropic_client.py  baseline_store.py  cli.py  cost_tracker.py  embedding_filter.py  golden_set.py  judge.py  prompt_registry.py  replay.py  report.py  sampler.py  stats_gate.py
tests/: test_anthropic_client.py  test_baseline_store.py  test_calibrate_judge.py  test_cli.py  test_cost_tracker.py  test_embedding_filter.py  test_golden_set.py  test_judge.py  test_prompt_registry.py  test_replay.py  test_report.py  test_sampler.py  test_stats_gate.py
